objects/AutoUpdateFieldValueCustomSetting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_SOQL_Criteria__c</fullName>
        <label>Additional SOQL Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Value_Update__c</fullName>
        <label>Field Value Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Currently only supports simple field value update.</description>
    <label>AutoUpdateFieldValueCustomSetting</label>
</CustomObject>